@@ -45,15 +45,20 @@ BOOST_AUTO_TEST_CASE(testPredictionFieldNameClash) {
     BOOST_TEST_REQUIRE(errors[0] == "Input error: prediction_field_name must not be equal to any of [is_training, prediction_probability, top_classes].");
 }
 
-BOOST_AUTO_TEST_CASE(testWriteOneRow) {
+template<typename T>
+void testWriteOneRow(const std::string& dependentVariableField,
+                     const std::string& predictionFieldType,
+                     T (rapidjson::Value::*extract)() const,
+                     const std::vector<T>& expectedPredictions) {
     // Prepare input data frame
-    const TStrVec columnNames{"x1", "x2", "x3", "x4", "x5", "x5_prediction"};
-    const TStrVec categoricalColumns{"x1", "x2", "x5"};
+    const std::string predictionField = dependentVariableField + "_prediction";
+    const TStrVec columnNames{"x1", "x2", "x3", "x4", "x5", predictionField};
+    const TStrVec categoricalColumns{"x1", "x2", "x3", "x4", "x5"};
     const TStrVecVec rows{{"a", "b", "1.0", "1.0", "cat", "-1.0"},
-                          {"a", "b", "2.0", "2.0", "cat", "-0.5"},
-                          {"a", "b", "5.0", "5.0", "dog", "-0.1"},
-                          {"c", "d", "5.0", "5.0", "dog", "1.0"},
-                          {"e", "f", "5.0", "5.0", "dog", "1.5"}};
+                          {"a", "b", "1.0", "1.0", "cat", "-0.5"},
+                          {"a", "b", "5.0", "0.0", "dog", "-0.1"},
+                          {"c", "d", "5.0", "0.0", "dog", "1.0"},
+                          {"e", "f", "5.0", "0.0", "dog", "1.5"}};
     std::unique_ptr<core::CDataFrame> frame =
         core::makeMainStorageDataFrame(columnNames.size()).first;
     frame->columnNames(columnNames);
@@ -67,10 +72,21 @@ BOOST_AUTO_TEST_CASE(testWriteOneRow) {
 
     // Create classification analysis runner object
     const auto spec{test::CDataFrameAnalysisSpecificationFactory::predictionSpec(
-        "classification", "x5", rows.size(), columnNames.size(), 13000000, 0, 0,
-        categoricalColumns)};
+        "classification", dependentVariableField, rows.size(),
+        columnNames.size(), 13000000, 0, 0, categoricalColumns)};
     rapidjson::Document jsonParameters;
-    jsonParameters.Parse("{\"dependent_variable\": \"x5\"}");
+    if (predictionFieldType.empty()) {
+        jsonParameters.Parse("{\"dependent_variable\": \"" + dependentVariableField + "\"}");
+    } else {
+        jsonParameters.Parse("{"
+                             "  \"dependent_variable\": \"" +
+                             dependentVariableField +
+                             "\","
+                             "  \"prediction_field_type\": \"" +
+                             predictionFieldType +
+                             "\""
+                             "}");
+    }
     const auto parameters{
         api::CDataFrameTrainBoostedTreeClassifierRunner::parameterReader().read(jsonParameters)};
     api::CDataFrameTrainBoostedTreeClassifierRunner runner(*spec, parameters);
@@ -83,10 +99,10 @@ BOOST_AUTO_TEST_CASE(testWriteOneRow) {
 
         frame->readRows(1, [&](TRowItr beginRows, TRowItr endRows) {
             const auto columnHoldingDependentVariable{
-                std::find(columnNames.begin(), columnNames.end(), "x5") -
+                std::find(columnNames.begin(), columnNames.end(), dependentVariableField) -
                 columnNames.begin()};
             const auto columnHoldingPrediction{
-                std::find(columnNames.begin(), columnNames.end(), "x5_prediction") -
+                std::find(columnNames.begin(), columnNames.end(), predictionField) -
                 columnNames.begin()};
             for (auto row = beginRows; row != endRows; ++row) {
                 runner.writeOneRow(*frame, columnHoldingDependentVariable,
@@ -95,17 +111,17 @@ BOOST_AUTO_TEST_CASE(testWriteOneRow) {
         });
     }
     // Verify results
-    const TStrVec expectedPredictions{"cat", "cat", "cat", "dog", "dog"};
     rapidjson::Document arrayDoc;
     arrayDoc.Parse<rapidjson::kParseDefaultFlags>(output.str().c_str());
     BOOST_TEST_REQUIRE(arrayDoc.IsArray());
     BOOST_TEST_REQUIRE(arrayDoc.Size() == rows.size());
+    BOOST_TEST_REQUIRE(arrayDoc.Size() == expectedPredictions.size());
     for (std::size_t i = 0; i < arrayDoc.Size(); ++i) {
         BOOST_TEST_CONTEXT("Result for row " << i) {
             const rapidjson::Value& object = arrayDoc[rapidjson::SizeType(i)];
             BOOST_TEST_REQUIRE(object.IsObject());
-            BOOST_TEST_REQUIRE(object.HasMember("x5_prediction"));
-            BOOST_TEST_REQUIRE(object["x5_prediction"].GetString() ==
+            BOOST_TEST_REQUIRE(object.HasMember(predictionField));
+            BOOST_TEST_REQUIRE((object[predictionField].*extract)() ==
                                expectedPredictions[i]);
             BOOST_TEST_REQUIRE(object.HasMember("prediction_probability"));
             BOOST_TEST_REQUIRE(object["prediction_probability"].GetDouble() > 0.5);
@@ -113,6 +129,25 @@ BOOST_AUTO_TEST_CASE(testWriteOneRow) {
             BOOST_TEST_REQUIRE(object["is_training"].GetBool());
         }
     }
+}
+
+BOOST_AUTO_TEST_CASE(testWriteOneRowPredictionFieldTypeIsInt) {
+    testWriteOneRow("x3", "int", &rapidjson::Value::GetInt, {1, 1, 1, 5, 5});
+}
+
+BOOST_AUTO_TEST_CASE(testWriteOneRowPredictionFieldTypeIsBool) {
+    testWriteOneRow("x4", "bool", &rapidjson::Value::GetBool,
+                    {true, true, true, false, false});
+}
+
+BOOST_AUTO_TEST_CASE(testWriteOneRowPredictionFieldTypeIsString) {
+    testWriteOneRow("x5", "string", &rapidjson::Value::GetString,
+                    {"cat", "cat", "cat", "dog", "dog"});
+}
+
+BOOST_AUTO_TEST_CASE(testWriteOneRowPredictionFieldTypeIsMissing) {
+    testWriteOneRow("x5", "", &rapidjson::Value::GetString,
+                    {"cat", "cat", "cat", "dog", "dog"});
 }
 
 BOOST_AUTO_TEST_SUITE_END()
